src/test/deca/syntax/valid/LE/Constructeur.deca
//test pour les classes

class Constructeur {
    protected int a; 

    void Constructeur (int valeur) {
        a = valeur ;
    }
}

{
    Constructeur a ;
    a.Constructeur(5) ;
}