src/test/deca/syntax/invalid/LE/AttAvecDeuxEquals.deca
//test invalide
//declaration avec deux equals

class C2 {
    int a ;
    int b = 5  = 3;
}